syntax = "proto3";

package soloway;

option go_package = "./pb";

service SolowayService{
  rpc PushPlacementStatByDayToBQ(PushPlacementStatByDayToBQRequest) returns(PushPlacementStatByDayToBQResponse); // Сбор статистики по площадкам в разрезе дней
}

//Конфигурация для BigQuery
message BqConfig{
  string project_id = 1; // required
  string dataset_id = 2; // required
  string table_id = 3; // required
  string service_key = 4; // required Название файла сервисного ключа
}


message GsConfig{
  string spreadsheet_id = 1; // required
  string service_key = 2; // required Название файла сервисного ключа
}

message Period{
  string date_from = 1; //  required  is date represented in the ISO-8601 format
  string date_till = 2; //  required  is date represented in the ISO-8601 format
}

message PushPlacementStatByDayToBQRequest{
  BqConfig  bq_config = 1; // required  Конфигурация для BigQuery
  GsConfig gs_config = 2; // required  Конфигурация для CloudStorage
  Period period = 3; //  required  Период данных для сбора
}

message PushPlacementStatByDayToBQResponse{
  bool is_ok = 1;
  repeated string warnings = 2; // Возникшие ошибки
}